syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "Commissions.proto";
import "Common.proto";

option csharp_namespace = "Mandarin.Api.Emails";
option java_package = "uk.co.thelittlemandarin.mandarin.api.emails";

package uk.co.thelittlemandarin;

// The email service definition.
service Emails {
  // Sends the <see cref="RecordOfSales"/> to the attached email address.
  rpc SendRecordOfSalesEmail (SendRecordOfSalesRequest) returns (SendRecordOfSalesResponse);
}

// The request message for getting all stockists.
message SendRecordOfSalesRequest {
  RecordOfSales recordOfSales = 1; // The artist commission breakdown.
}

// The response message containing all stockists.
message SendRecordOfSalesResponse {
  bool isSuccess = 1;
  string message = 2;
}
